@@ -148,13 +148,17 @@ public:
 //  William D. Clinger.
 //  How to read floating point numbers accurately
 //  Proceedings of the ACM SIGPLAN 1990 conference on Programming language design and implementation, p.92-101, June 1990
+
+//  Robert G. Burger and R. Kent Dybvig.
+//  Printing floatingpoint numbers quickly and accurately.
+//  In Proceedings of the ACM SIGPLAN '96 Conference on Programming Language Design and Implementation, pages 108--116.
 //
 //  Originally from Ypsilon Scheme
-class AlgorithmR EXTEND_GC
+class FlonumUtil EXTEND_GC
 {
 public:
-    static double bestApprox(Object f, const int e, const double z0);
-    static ucs4string cnvt_flonum_to_string(double v, bool no_exponential);
+    static double algorithmR(Object f, const int e, const double z0);
+    static ucs4string flonumToUcs4String(double v, bool no_exponential);
 private:
     static const int64_t iexpt_2n52 = 0x10000000000000LL; // 2^(53-1)
     static const int64_t iexpt_2n53 = 0x20000000000000LL; // 2^53
