@@ -217,10 +217,9 @@ TEST_F(ObjectTest, Symbol) {
 }
 
 TEST_F(ObjectTest, AlgorithmR) {
+    EXPECT_STREQ("1e99", FlonumUtil::flonumToUcs4String(FlonumUtil::algorithmR(Object::makeFixnum(10), 98, 1.0e99), false).ascii_c_str());
+    EXPECT_STREQ("1000000000.0", FlonumUtil::flonumToUcs4String(FlonumUtil::algorithmR(Object::makeFixnum(10), 8, 1.0e9), false).ascii_c_str());
 
-    double z0 = Arithmetic::mul(Object::makeFlonum(1.), Arithmetic::expt(Object::makeFixnum(10), Object::makeFixnum(9))).toFlonum()->value();
-    char buf[256];
-    snprintf(buf, sizeof(buf), "%.20g", AlgorithmR::bestApprox(Object::makeFixnum(1), 99, 1.0e99));
-    EXPECT_STREQ("1.0e9", buf);
+    FlonumUtil::flonumToUcs4String(123.3456, false);
 }
 
